--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ index_generator:
   path: ''
   per_page: 10
   order_by: -date
+  single_language_index: false
   
 # Category & Tag
 default_category: uncategorized
