--- a/package.json
+++ b/package.json
@@ -1,28 +1,18 @@
 {
-  "name": "hexo-site",
-  "version": "0.0.0",
+  "name": "portal",
+  "version": "0.0.1",
   "private": true,
-  "hexo": {
-    "version": "3.4.1"
-  },
+
   "dependencies": {
-    "hexo": "^3.2.0",
-    "hexo-generator-archive": "^0.1.4",
-    "hexo-generator-category": "^0.1.3",
-    "hexo-generator-i18n": "0.0.7",
-    "hexo-generator-index": "^0.2.0",
-    "hexo-generator-tag": "^0.2.0",
-    "hexo-renderer-ejs": "^0.3.0",
-    "hexo-renderer-marked": "^0.3.0",
-    "hexo-renderer-stylus": "^0.3.1",
-    "hexo-server": "^0.2.0"
+
   },
   "scripts": {
-    "clean": "hexo clean",
-    "server": "hexo server --debug",
-    "migrate": "hexo migrate dropbox",
-    "start": "hexo migrate dropbox && hexo server -p $PORT",
-    "generate": "hexo generate",
-    "deploy": "hexo generate --deploy"
+    "build": "tsc index.ts && node index.js",
+  },
+  "devDependencies": {
+    "@types/ejs": "^2.3.33",
+    "@types/node": "^8.0.54",
+    "ejs": "^2.5.7",
+    "typescript": "^2.6.2"
   }
 }
