added new updated to stefan version (main.css and all sections .ejs). Google maps are now removed and replaced with static image

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 
   },
   "scripts": {
-    "build": "tsc index.ts && node index.js",
+    "build": "tsc index.ts && node index.js"
   },
   "devDependencies": {
     "@types/ejs": "^2.3.33",
